Renamed calculate route, added necessery fileds
